Decursive 2.0 RC2 by Archarodim

Changes from Decursive 2.0 RC1 to Decursive 2.0 RC2

- Mages will now cast polymorph rank one instead of the highest rank (uses less mana and last less time).
- "Cast success" messages now include the spell rank.

Changes from Decursive 2.0 BETA 7-Pub to Decursive 2.0 RC1

- An error message is displayed if Decursive cannot load its main libraries properly.
- It's now possible to disable the warning displayed when no key is mapped to the macro.
- There should be no more "succeeded on NONAME" messages.
- Descriptions in French and Traditional Chinese have been added.
- .TOC updated for WoW 2.1.


Changes from Decursive 2.0 BETA 6-Pub-fixed to Decursive 2.0 BETA 7-Pub

New features:

- It's now possible to add dynamic groups and classes in the priority and skip list:
  Instead of adding each unit separately, class and/or group entities (ex: [
  group 1 ] , [ Mage ]) will appear in the lists. The old behavior can still be
  used by maintaining [SHIFT] when clicking on a group or class-name in the
  populate list tool (names will be added).

- The last change also allow to sort units per group AND classes at the same time.

- An informative help message is displayed when the user doesn't click a MUF
  with the correct mouse button.

- Major code optimization: reduced CPU usage from ~0.04 seconds per seconds to
  ~0.001 seconds per second (results obtained with up to date external Ace2
  libraries, if Decursive's embedded shared libraries are the most up to date,
  Decursive CPU usage will also count the usage of the shared libraries by other
  add-ons).

- Added revised Traditional Chinese translation by Peter Sun.

Changes:
- When a MUF is clicked, any spell targeting in progress is canceled.
- The MUFs react upon mouse button release instead of mouse button press.
- When adding an affliction to the filter, the entered name is trimmed.
- It is now possible to move the "Decursive" bar maintaining the Alt key pushed