@@ -8,7 +8,7 @@
 ## SavedVariablesPerCharacter: DcrCharDB
 ## SavedVariables: DcrDB
 
-## Version: 2.0.0 RC1
+## Version: 2.0.0 RC2
 ## Author: Archarodim
 
 ## X-License: GNU GPL
@@ -19,7 +19,7 @@
 ## X-ReleaseDate: "$Date$"
 ## X-Category: Combat
 ## X-Website: http://www.2072productions.com/?to=decursive.php
-## X-Credits: Sylvin (French translation), Peter Sun (ZhTW translation), Stalvan Mismantle (Cobaye)
+## X-Credits: Sylvin (Full french translation), Peter Sun (ZhTW translation), Fenlis (koKR translation), Stalvan Mismantle (Cobaye)
 
 ## X-RelSite-WoWI: 4937
 ## X-RelSite-Curse: 3011
