@@ -297,6 +297,7 @@ L:RegisterTranslations("deDE", function() return {
 
     [LOC.OPT_NOKEYWARN] = LOC.OPT_NOKEYWARN,
     [LOC.OPT_NOKEYWARN_DESC] = LOC.OPT_NOKEYWARN_DESC,
+    [LOC.NOSPELL] = LOC.NOSPELL,
 
 
 } end);
