@@ -291,6 +291,7 @@ L:RegisterTranslations("esES", function() return {
 
     [LOC.OPT_NOKEYWARN] = LOC.OPT_NOKEYWARN,
     [LOC.OPT_NOKEYWARN_DESC] = LOC.OPT_NOKEYWARN_DESC,
+    [LOC.NOSPELL] = LOC.NOSPELL,
 
 } end);
 
